# ModFunctionMenu

./: .clang-format  .editorconfig  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: ccld_ModFunctionMenu.toml  ccld_ModFunctionMenu_fonts.toml  ccld_ModFunctionMenu_styles.toml  headerlist.cmake  sourcelist.cmake  version.rc.in
data/Interface/Translations/: ccld_ModFunctionMenu_chinese.txt  ccld_ModFunctionMenu_english.txt
data/SKSE/Plugins/ccld_ModFunctionMenu/Config/: Mod Function Menu.toml
scripts/: gensrc.py
src/: Application.cpp  Application.h  Configuration.cpp  Configuration.h  Core.cpp  Core.h  EventSink.cpp  EventSink.h  Function.cpp  Hooks.cpp  Hooks.h  HotkeyManager.cpp  HotkeyManager.h  InputManager.cpp  InputManager.h  Main.cpp  Menu.cpp  Menu.h  PCH.h  Translation.cpp  Translation.h
src/CLib/: Key.h
src/ImGui/: FontManager.cpp  FontManager.h  Input.cpp  Input.h  Menu.cpp  Menu.h  Renderer.cpp  Renderer.h  StyleManager.cpp  StyleManager.h
src/Util/: Singleton.h  TOML.h
src/XSEPlugin/: Configuration.h  Core.cpp  Core.h  Function.cpp  Hooks.cpp  Hooks.h  InputManager.cpp  InputManager.h  Main.cpp  PCH.h
src/XSEPlugin/Base/: Configuration.cpp  Configuration.h  StringTable.cpp  StringTable.h  Translation.cpp  Translation.h
src/XSEPlugin/ImGui/: FontManager.cpp  FontManager.h  Input.cpp  Input.h  Menu.cpp  Menu.h  Renderer.cpp  Renderer.h  StyleManager.cpp  StyleManager.h
src/XSEPlugin/ImGui/Impl/: Fonts.cpp  Fonts.h  Styles.cpp  Styles.h  Texts.cpp  Texts.h
src/XSEPlugin/Util/: File.h  Singleton.h  TOML.h  Win.h
src/XSEPlugin/Util/CLib/: Hook.h  Key.h
